<package>
  <name>location_match_score</name>
  <description>
     This package pulls in the Karto mapping library, and provides a ROS
     wrapper for using it.
  </description>
  <version>0.8.1</version>
  <maintainer email="lybhit@gmail.com">Michael Ferguson</maintainer>
  <author>lyb</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>


  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

</package>
